--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
       ]
     },
     "allowImportingTsExtensions": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "types": ["vite/client"],
     "noEmit": true
   }
